experimental/ast/testdata/parser/syntax/not_first.proto.stderr
error: syntax declaration must be the first declaration in a file
  --> testdata/parser/syntax/not_first.proto:17:1
   | 
15 | package test;
   | ------------- previous declaration
16 | 
17 | syntax = "proto2";
   | ^^^^^^^^^^^^^^^^^^ expected this to be the first declaration

encountered 1 error
